# pydantic-protobuf-gen

./: .devcontainer.json  .gitignore  CLIENT_STREAMING_GUIDE.md  Dockerfile  MANIFEST.in  QUICKSTART.md  README.md  README.zh.md  README_ZH.md  build.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  test.py  test_client_streaming.py
.devcontainer/: Dockerfile.dev  README.md
docs/: CLIENT_STREAMING_GUIDE.md
example/: __init__.py  client.py  main.py
example/client/: example_client.py  snk.py
example/client/tests/: README.md  conftest.py  run_tests.py  test_client.py  test_client_streaming.py  test_performance.py
example/models/: __init__.py  constant_model.py  example2_model.py  example3_model.py  example_model.py  fields.json  helloworld_model.py  messages.json  services.json
example/models/google/protobuf/: descriptor.proto_model.py
example/pb/: constant_pb2.py  constant_pb2_grpc.py  example2_pb2.py  example2_pb2.pyi  example2_pb2_grpc.py  example3_pb2.py  example3_pb2_grpc.py  example_pb2.py  example_pb2.pyi  example_pb2_grpc.py  helloworld_pb2.py  helloworld_pb2.pyi  helloworld_pb2_grpc.py
example/protos/: Makefile  example.proto  helloworld.proto
example/protos/protobuf_pydantic_gen/: pydantic.proto
example/tests/: __init__.py  run_tests.py  test_client.py  test_models.py
grpc_fastapi_client_gen/: client.j2  client_generator.py  main.py
grpc_fastapi_gateway/: README_PATCH.md  config.py  context.py  decorators.py  gateway.py  patch.sh
models/: constant_model.py  example2_model.py  example3_model.py  example_model.py  fields.json  messages.json
pb/: constant_pb2.py  constant_pb2.pyi  example2_pb2.py  example3_pb2.py  example3_pb2.pyi  example_pb2.py  example_pb2.pyi
protobuf_pydantic_gen/: ext.py  generator.py  main.py  message_processor.py  pydantic.proto  type_mapper.py
protos/: constant.proto  example.proto  example2.proto  example3.proto  options.proto  services.proto
pydantic_protobuf/: __init__.py  ext.py  main.py  options_pb2.py  orm.py  pydantic_pb2.py  template.j2  utils.py
pydantic_protobuf_gen/: main.py  pydantic_pb2.py  template.j2
