[metadata]
name = pydantic-protobuf
version = attr: pydantic_protobuf.main.__version__
description = Generate pydantic stub files from protobuf specs
keywords = pydantic proto dropbox
license = Apache License 2.0
author = Zhonghe,Qin
author_email = vforfreedom96@gmail.com
url = https://github.com/begonia-org/pydantic-protobuf
download_url = https://github.com/begonia-org/pydantic-protobuf/releases

[options]
py_modules =
    pydantic_protobuf
    pydantic_protobuf.main
    pydantic_protobuf.options_pb2
install_requires =
    protobuf>=4.21.12
    types-protobuf>=4.24
python_requires = >=3.8

[options.entry_points]
console_scripts =
    protoc-gen-pydantic = pydantic_protobuf.main:main